deploy: 7ddadda3a1b3fc2fa8858be86aaa267a32139604

--- a/events-archive.html
+++ b/events-archive.html
@@ -68,7 +68,43 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
-                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/308208478/">IntelliJ as a game engine + 1 more</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/310395900/">Creating AI-infused (Agentic) Apps, the Easy Way 🤙 + Java for Kotlin developers</a>
+                </div>
+                <span>
+                    IBA, Louvain-la-Neuve - Fri 12 September 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Creating AI-infused (Agentic) Apps, the Easy Way 🤙
+                                        <span class="small">by Kevin Dubois</span>
+                                </li>
+                                <li class="ms-4">
+                                    Java for Kotlin developers
+                                        <span class="small">by Tim Schraepen</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/310395900/">Breaching LLM Powered Applications + Lessons from the Oregon Trail</a>
+                </div>
+                <span>
+                    Cegeka, Hasselt - Thu 28 August 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Breaching LLM Powered Applications
+                                        <span class="small">by Brian Vermeer</span>
+                                </li>
+                                <li class="ms-4">
+                                    Lessons from the Oregon Trail for the Secure Software Supply Chain
+                                        <span class="small">by Kadi McKean</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/308208478/">IntelliJ as a game engine + Wrapping up the Spring Boot 3.x generation</a>
                 </div>
                 <span>
                     Oniryx, Gembloux - Thu 19 June 2025
@@ -78,7 +114,8 @@
                                         <span class="small">by Alexander Chatzizacharias</span>
                                 </li>
                                 <li class="ms-4">
-                                    Could be you!
+                                    Wrapping up the Spring Boot 3.x generation
+                                        <span class="small">by Stéphane Nicol</span>
                                 </li>
                         </ul>
                 </span>
