--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -201,6 +201,24 @@ A partner should be able to provide:</p>
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/310395900/">Creating AI-infused (Agentic) Apps, the Easy Way 🤙 + Java for Kotlin developers</a>
+                            </div>
+                            <span>
+                                IBA, Louvain-la-Neuve - Fri 12 September 2025
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                Creating AI-infused (Agentic) Apps, the Easy Way 🤙
+                                                    <span class="small">by Kevin Dubois</span>
+                                            </li>
+                                            <li class="ms-4">
+                                                Java for Kotlin developers
+                                                    <span class="small">by Tim Schraepen</span>
+                                            </li>
+                                    </ul>
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
