deploy: 7598d6783e63284a7e2d8d81850aeaa871b1e9ca

--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -203,18 +203,14 @@ A partner should be able to provide:</p>
             <ul class="list-unstyled">
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/310395900/">Creating AI-infused (Agentic) Apps, the Easy Way 🤙 + Java for Kotlin developers</a>
+                                    <a href="https://m.devoxx.com/events/dvbe25/talks/20670/java-and-jvm-lovers-in-belgium-lets-unite">Java and JVM lovers in Belgium, let's unite! - BoF @ Devoxx</a>
                             </div>
                             <span>
-                                IBA, Louvain-la-Neuve - Fri 12 September 2025
+                                Devoxx Belgium, Antwerp - Thu 9 October 2025
                                     <ul class="list-unstyled">
                                             <li class="ms-4">
-                                                Creating AI-infused (Agentic) Apps, the Easy Way 🤙
-                                                    <span class="small">by Kevin Dubois</span>
-                                            </li>
-                                            <li class="ms-4">
-                                                Java for Kotlin developers
-                                                    <span class="small">by Tim Schraepen</span>
+                                                Java and JVM lovers in Belgium, let's unite! - BoF @ Devoxx
+                                                    <span class="small">by Loïc Magnette, Tom Cools, Frank Delporte</span>
                                             </li>
                                     </ul>
                             </span>
