--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -40,7 +40,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light border-bottom shadow">
         <div class="container">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="index.html">
                 <img alt="BeJUG logo" src="logo.png" height="40px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -201,20 +201,6 @@ A partner should be able to provide:</p>
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
-                        <li class="mb-2">
-                            <div class="title">
-                                    <a href="https://m.devoxx.com/events/dvbe25/talks/20670/java-and-jvm-lovers-in-belgium-lets-unite">Java and JVM lovers in Belgium, let's unite! - BoF @ Devoxx</a>
-                            </div>
-                            <span>
-                                Devoxx Belgium, Antwerp - Thu 9 October 2025
-                                    <ul class="list-unstyled">
-                                            <li class="ms-4">
-                                                Java and JVM lovers in Belgium, let's unite! - BoF @ Devoxx
-                                                    <span class="small">by Loïc Magnette, Tom Cools, Frank Delporte</span>
-                                            </li>
-                                    </ul>
-                            </span>
-                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
