--- a/events-archive.html
+++ b/events-archive.html
@@ -40,7 +40,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light border-bottom shadow">
         <div class="container">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="index.html">
                 <img alt="BeJUG logo" src="logo.png" height="40px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
