deploy: ae354f8e63dae3c839613ea087b3407320b61209

--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/311657239/">From Fragile to Fearless: Writing Tests That Last</a>
+                            </div>
+                            <span>
+                                Inetum Gent - Tue 18 November 2025
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                From Fragile to Fearless: Writing Tests That Last
+                                                    <span class="small">by Wouter Bauweraerts</span>
+                                            </li>
+                                            <li class="ms-4">
+                                                The Wait is Over: Foreign Function & Memory (FFM) API brings modern Java to the Raspberry Pi
+                                                    <span class="small">by Frank Delporte</span>
+                                            </li>
+                                    </ul>
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
