--- a/events-archive.html
+++ b/events-archive.html
@@ -68,6 +68,24 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/311657239/">From Fragile to Fearless: Writing Tests That Last</a>
+                </div>
+                <span>
+                    Inetum Gent - Tue 18 November 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    From Fragile to Fearless: Writing Tests That Last
+                                        <span class="small">by Wouter Bauweraerts</span>
+                                </li>
+                                <li class="ms-4">
+                                    The Wait is Over: Foreign Function & Memory (FFM) API brings modern Java to the Raspberry Pi
+                                        <span class="small">by Frank Delporte</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://m.devoxx.com/events/dvbe25/talks/20670/java-and-jvm-lovers-in-belgium-lets-unite">Java and JVM lovers in Belgium, let's unite! - BoF @ Devoxx</a>
                 </div>
                 <span>
