--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="p-2"><a style="color: #55acee" href="https://twitter.com/BeJUG" role="button"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="p-2"><a style="color: #6364ff" href="https://foojay.social/@BeJUG" target="_blank" role="button"><i class="fa-brands fa-mastodon"></i></a></li>
                     <li class="p-2"><a style="color: #208bfe" href="https://bsky.app/profile/bejug.bsky.social" role="button"><i class="fa-brands fa-bluesky"></i></a></li>
                     <li class="p-2"><a style="color: #333" href="https://github.com/bejug" role="button"><i class="fa-brands fa-github"></i></a></li>
+                    <li class="p-2"><a style="color: #D63B63" href="https://www.meetup.com/belgian-java-user-group/" role="button"><i class="fa-brands fa-meetup"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -112,6 +114,7 @@
                 <a class="m-1" style="color: #6364ff" href="https://foojay.social/@BeJUG" target="_blank" role="button"><i class="fa-brands fa-mastodon"></i></a>
                 <a class="m-1" style="color: #0077b5" href="https://www.linkedin.com/groups/155664/" target="_blank" role="button"><i class="fa-brands fa-linkedin"></i></a>
                 <a class="m-1" style="color: #333" href="https://github.com/bejug" target="_blank" role="button"><i class="fa-brands fa-github"></i></a>
+                <a class="m-1" style="color: #D63B63" href="https://www.meetup.com/belgian-java-user-group/" role="button"><i class="fa-brands fa-meetup"></i></a>
             </div>
         </div>
     </div>
