deploy: 43649fd1055f32cdd2e5ce6b6c2c67dde1a899d4

--- a/events-archive.html
+++ b/events-archive.html
@@ -70,6 +70,14 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/312391067/">[ONLINE] Community Participation Call</a>
+                </div>
+                <span>
+                    Online - Wed 17 December 2025
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/311657239/">From Fragile to Fearless: Writing Tests That Last</a>
                 </div>
                 <span>
