--- a/visit-belgium-tips.html
+++ b/visit-belgium-tips.html
@@ -296,20 +296,10 @@ micro roastery.</p>
             <ul class="list-unstyled">
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/311657239/">From Fragile to Fearless: Writing Tests That Last</a>
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/312391067/">[ONLINE] Community Participation Call</a>
                             </div>
                             <span>
-                                Inetum Gent - Tue 18 November 2025
-                                    <ul class="list-unstyled">
-                                            <li class="ms-4">
-                                                From Fragile to Fearless: Writing Tests That Last
-                                                    <span class="small">by Wouter Bauweraerts</span>
-                                            </li>
-                                            <li class="ms-4">
-                                                The Wait is Over: Foreign Function & Memory (FFM) API brings modern Java to the Raspberry Pi
-                                                    <span class="small">by Frank Delporte</span>
-                                            </li>
-                                    </ul>
+                                Online - Wed 17 December 2025
                             </span>
                         </li>
                 <div class="small float-end">
