--- a/events-archive.html
+++ b/events-archive.html
@@ -70,6 +70,20 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/312620099/">Build an AI-Infused Chat Bot with LangChain4j</a>
+                </div>
+                <span>
+                    Sweet Mustard Kortrijk - Tue 21 January 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    From Fragile to Fearless: Writing Tests That Last
+                                        <span class="small">by Antonio Goncalves</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/312391067/">[ONLINE] Community Participation Call</a>
                 </div>
                 <span>
