--- a/visit-belgium-tips.html
+++ b/visit-belgium-tips.html
@@ -294,6 +294,20 @@ micro roastery.</p>
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/312620099/">Build an AI-Infused Chat Bot with LangChain4j</a>
+                            </div>
+                            <span>
+                                Sweet Mustard Kortrijk - Wed 21 January 2026
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                From Fragile to Fearless: Writing Tests That Last
+                                                    <span class="small">by Antonio Goncalves</span>
+                                            </li>
+                                    </ul>
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
